// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uikit/Input should renders correctly 1`] = `
<Input
  intent="default"
  name="someInput"
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  size="l"
  type="text"
  value="some text"
>
  <div
    className="wrapper size-l"
  >
    <input
      className="input default"
      name="someInput"
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="some text"
    />
  </div>
</Input>
`;

exports[`uikit/Input should renders correctly with prependValue 1`] = `
<Input
  intent="default"
  name="someInput"
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  prependValue="steam://"
  size="l"
  type="text"
  value="some text"
>
  <div
    className="wrapper size-l"
  >
    <input
      className="input default"
      name="someInput"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="steam://"
      type="text"
      value="steam://some text"
    />
  </div>
</Input>
`;
